# squanchy

./: .gitignore  CHANGELOG.md  README.md  squanchy.cabal  stack.yaml
src/: Eval.hs  Interpreter.hs  Statements.hs  Types.hs
src-exe/: Main.hs
src-test/: Main.hs
src/Examples/: Fib.hs  Input.hs  Print.hs
