name:                squanchy
version:             0.1.0.0
-- synopsis:
-- description:

license:             ISC
license-file:        LICENSE
author:              Michael Litchard
maintainer:          michael@schmong.org
copyright:           © 2017 Michael Litchard
homepage:            https://github.com/mlitchard/squanchy
bug-reports:         https://github.com/mlitchard/squanchy/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/mlitchard/squanchy

library
  default-language:  Haskell2010
  default-extensions:  NoImplicitPrelude
                     , GADTs
                     , TypeFamilies
                     , OverloadedStrings
                     , ScopedTypeVariables
  ghc-options:      -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   Eval
                   , Types
                   , Statements
                   , Interpreter
                   , Examples.Fib
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude
                   , containers == 0.6.5.1
                   , mtl == 2.2.2 
                   , text == 1.2.4.1

executable squanchy-exe
  default-language:  Haskell2010
  default-extensions:  NoImplicitPrelude
                     , GADTs
                     , TypeFamilies
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , basic-prelude
                   , squanchy

test-suite squanchy-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , squanchy

test-suite squanchy-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , squanchy

benchmark squanchy-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , squanchy
